[package]
name = "althea_proto"
version = "0.9.2"
description = "Protobuf stuct defintions for interacting with Althea Chain"
authors = ["Justin Kilpatrick <justin@althea.net>", "Christian Borst <christian@althea.systems>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/althea-net/proto/tree/main/althea_proto"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = {workspace = true}
prost-types = {workspace = true}
cosmos-sdk-proto = {package="cosmos-sdk-proto-althea", path = "../cosmos_sdk_proto", version="0", features = ["ethermint"]}
tonic = {workspace = true}

