[package]
name = "cosmos-sdk-proto-althea"
version = "0.14.0"
authors = [
    "Justin Kilpatrick <justin@althea.net>",
    "Christian Borst <christian@althea.systems>",
    "Greg Szabo <greg@informal.systems>",
    "Tony Arcieri <tony@iqlusion.io>"
]
license = "Apache-2.0"
repository = "https://github.com/althea-net/proto/tree/main/cosmos_sdk_proto"
description = "Protobuf stuct defintions for interacting with Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.56"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }

# Optional dependencies
tonic = { workspace = true, optional=true }

[features]
default = ["grpc"]
grpc = ["tonic"]
cosmwasm = []
bech32ibc = []
ethermint = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
