[package]
name = "proto_build"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>", "Christian Borst <christian@althea.systems>"]
edition = "2018"


[dependencies]
prost = {workspace = true}
tonic = {workspace = true}
prost-build = {workspace = true}
prost-types = {workspace = true}
tonic-build = {workspace = true}
log = {workspace=true}
env_logger = {workspace=true}

walkdir = "2"
regex = "1.5"
